# passive-gripper

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.reuse/: dep5
LICENSES/: LicenseRef-UW-Non-Commercial.txt
assets/: LICENSE.txt  base.stl  forearm.stl  shoulder.stl  upperarm.stl  wrist1.stl  wrist2.stl  wrist3.stl
cmake/: FindLIBIGL.cmake
data/: LICENSE.txt
data/psg/: A1-f.psg  A1-s.psg  A2.psg  A3.psg  A4.psg  A5.psg  B.psg  C1.psg  C2.psg  C3.psg  C4.psg  C5.psg  C6.psg  C7.psg  C8.psg  D1.psg  D2.psg  D3.psg  D4.psg  D5.psg  D6.psg  D7.psg  D8.psg
data/stl/: A1-f.stl  A1-s.stl  A2.stl  A3.stl  A4.stl  A5.stl  B.stl  C1.stl  C2.stl  C3.stl  C4.stl  C5.stl  C6.stl  C7.stl  C8.stl  D1.stl  D2.stl  D3.stl  D4.stl  D5.stl  D6.stl  D7.stl  D8.stl
examples/: 006_mustard_bottle.ply  019_pitcher_base.ply  021_bleach_cleanser.ply  025_mug.dxf  025_mug.ply  025_mug.txt  035_power_drill.ply  035_power_drill_plate.dxf  035_power_drill_result.txt  048_hammer.ply  050_medium_clamp.ply  051_large_clamp.ply  052_extra_large_clamp.ply  054_softball.ply  061_foam_brick.ply  072_a_toy_airplane.ply  072_a_toy_airplane_plate.dxf  072_a_toy_airplane_result.txt  bunny_plate.dxf  bunny_result.txt
include/: utils.h
include/passive-gripper/: Constants.h  CostFunctions.cpp  CostFunctions.h  Debugger.cpp  Debugger.h  DiscreteDistanceField.cpp  DiscreteDistanceField.h  GeometryUtils.cpp  GeometryUtils.h  Initialization.cpp  Initialization.h  Optimizer.cpp  Optimizer.h  PassiveGripper.cpp  PassiveGripper.h  QualityMetric.cpp  QualityMetric.h  SweptVolume.cpp  SweptVolume.h  TopoOpt.cpp  TopoOpt.h  UnionFind.cpp  UnionFind.h
include/passive-gripper/models/: ContactPoint.h  ContactPointFilter.h  ContactPointMetric.h  ContactSettings.h  CostSettings.h  FingerSettings.h  GripperParams.h  GripperSettings.h  MeshDependentResource.cpp  MeshDependentResource.h  OptSettings.h  SettingsOverrider.cpp  SettingsOverrider.h  TopoOptSettings.h  TrajectorySettings.h
include/passive-gripper/robots/: Robots.cpp  Robots.h
include/passive-gripper/serialization/: Serialization.h
src/: ContactPoint.h  Geometry.cpp  Geometry.h  Gripper.cpp  Gripper.h  IKUtils.cpp  IKUtils.h  MainUI.cpp  MainUI.h  MeshInfo.cpp  MeshInfo.h  SelectUI.cpp  SelectUI.h  Utils.cpp  Utils.h  Voxel.cpp  Voxel.h  VoxelPipeline.cpp  VoxelPipeline.h  VoxelPipelineSettings.h  Voxels.cpp  Voxels.h  main.cpp
src-batch/: PipelineStages.h  PiplineStages.cpp  Result.h  Testcase.cpp  Testcase.h  main.cpp
src-ui/: Assets.h  Components.cpp  Components.h  Layer.h  MainUI.actions.cpp  MainUI.cpp  MainUI.h  MainUI.layers.cpp  ViewModel.cpp  ViewModel.h  main.cpp
